made the lists selectable

--- a/app.css
+++ b/app.css
@@ -617,12 +617,10 @@ video {
   outline-offset: 2px;
 }
 
-@layer {
-  .selected {
-    background-color: rgb(156 163 175 / var(--tw-bg-opacity));
-  }
+.list:hover {
+  background-color: rgb(182, 182, 182);
+}
 
-  .hoover:hover {
-    background-color: black;
-  }
-};
+.selected {
+  background-color: rgb(116, 116, 116);
+}
