--- a/app.css
+++ b/app.css
@@ -534,16 +534,9 @@ video {
   --tw-backdrop-sepia:  ;
 }
 
-.fixed {
-  position: fixed;
-}
-
-.relative {
-  position: relative;
-}
-
-.m-16 {
-  margin: 4rem;
+.mx-5 {
+  margin-left: 1.25rem;
+  margin-right: 1.25rem;
 }
 
 .my-10 {
@@ -551,48 +544,21 @@ video {
   margin-bottom: 2.5rem;
 }
 
-.ml-5 {
-  margin-left: 1.25rem;
-}
-
-.mt-14 {
-  margin-top: 3.5rem;
-}
-
-.mt-10 {
-  margin-top: 2.5rem;
+.my-3 {
+  margin-top: 0.75rem;
+  margin-bottom: 0.75rem;
 }
 
 .ml-16 {
   margin-left: 4rem;
 }
 
+.mt-10 {
+  margin-top: 2.5rem;
+}
+
 .flex {
   display: flex;
-}
-
-.h-14 {
-  height: 3.5rem;
-}
-
-.h-16 {
-  height: 4rem;
-}
-
-.h-screen {
-  height: 100vh;
-}
-
-.h-48 {
-  height: 12rem;
-}
-
-.h-3 {
-  height: 0.75rem;
-}
-
-.h-10 {
-  height: 2.5rem;
 }
 
 .h-fit {
@@ -600,30 +566,24 @@ video {
   height: fit-content;
 }
 
+.h-screen {
+  height: 100vh;
+}
+
+.w-1\/4 {
+  width: 25%;
+}
+
+.w-2\/5 {
+  width: 40%;
+}
+
 .w-3\/12 {
   width: 25%;
 }
 
-.w-4\/5 {
-  width: 80%;
-}
-
 .w-full {
   width: 100%;
-}
-
-.w-11 {
-  width: 2.75rem;
-}
-
-.w-max {
-  width: -moz-max-content;
-  width: max-content;
-}
-
-.w-fit {
-  width: -moz-fit-content;
-  width: fit-content;
 }
 
 .flex-row {
@@ -638,16 +598,17 @@ video {
   align-items: center;
 }
 
-.justify-center {
-  justify-content: center;
+.rounded-lg {
+  border-radius: 0.5rem;
+}
+
+.rounded-b-lg {
+  border-bottom-right-radius: 0.5rem;
+  border-bottom-left-radius: 0.5rem;
 }
 
 .border-2 {
   border-width: 2px;
-}
-
-.border {
-  border-width: 1px;
 }
 
 .border-b-2 {
@@ -674,33 +635,9 @@ video {
   background-color: rgb(209 213 219 / var(--tw-bg-opacity));
 }
 
-.bg-black {
-  --tw-bg-opacity: 1;
-  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
-}
-
-.pl-5 {
-  padding-left: 1.25rem;
-}
-
-.text-2xl {
-  font-size: 1.5rem;
-  line-height: 2rem;
-}
-
 .text-lg {
   font-size: 1.125rem;
   line-height: 1.75rem;
-}
-
-.text-9xl {
-  font-size: 8rem;
-  line-height: 1;
-}
-
-.text-7xl {
-  font-size: 4.5rem;
-  line-height: 1;
 }
 
 .outline-none {
@@ -713,5 +650,50 @@ video {
 }
 
 .selected {
-  background-color: rgb(116, 116, 116);
+  background-color: #6e6b6b;
+}
+
+.list-group-item{
+  font-size: 2.5vw;
+  text-align: center;
+  width: 100%;
+  background-color: rgb(209 213 219);
+  border-bottom: solid black;
+}
+
+#current-list-name{
+  font-size: 5vw;
+}
+
+.current-list-todos{
+  font-size: large;
+  border: solid red;
+  margin: 1%;
+  padding: 5px;
+  width: 50%;
+  font-size: 3vw;
+}
+
+#check{
+  width: 4vw;
+  height: 2vw;
+}
+
+#listBox{
+  width: 20vw;
+  height: 5vh;
+  padding: 25px 0px;
+  font-size: 2vw;
+}
+
+#bottombox{
+  width: 38.5vw;
+  height: 10%;
+  margin: 0% 1.1%;
+}
+
+#enter{
+  font-size: 1vw;
+  padding: 1%;
+  margin: 3%;
 }
