--- a/app.css
+++ b/app.css
@@ -534,37 +534,17 @@ video {
   --tw-backdrop-sepia:  ;
 }
 
-.fixed {
-  position: fixed;
-}
-
-.relative {
-  position: relative;
-}
-
-.m-16 {
-  margin: 4rem;
-}
-
 .my-10 {
   margin-top: 2.5rem;
   margin-bottom: 2.5rem;
 }
 
-.ml-5 {
-  margin-left: 1.25rem;
-}
-
-.mt-14 {
-  margin-top: 3.5rem;
+.ml-16 {
+  margin-left: 4rem;
 }
 
 .mt-10 {
   margin-top: 2.5rem;
-}
-
-.ml-16 {
-  margin-left: 4rem;
 }
 
 .flex {
@@ -579,25 +559,13 @@ video {
   height: 4rem;
 }
 
-.h-screen {
-  height: 100vh;
-}
-
-.h-48 {
-  height: 12rem;
-}
-
-.h-3 {
-  height: 0.75rem;
-}
-
-.h-10 {
-  height: 2.5rem;
-}
-
 .h-fit {
   height: -moz-fit-content;
   height: fit-content;
+}
+
+.h-screen {
+  height: 100vh;
 }
 
 .w-3\/12 {
@@ -608,22 +576,13 @@ video {
   width: 80%;
 }
 
-.w-full {
-  width: 100%;
-}
-
-.w-11 {
-  width: 2.75rem;
-}
-
-.w-max {
-  width: -moz-max-content;
-  width: max-content;
-}
-
 .w-fit {
   width: -moz-fit-content;
   width: fit-content;
+}
+
+.w-full {
+  width: 100%;
 }
 
 .flex-row {
@@ -642,12 +601,16 @@ video {
   justify-content: center;
 }
 
-.border-2 {
-  border-width: 2px;
+.justify-between {
+  justify-content: space-between;
 }
 
-.border {
-  border-width: 1px;
+.justify-around {
+  justify-content: space-around;
+}
+
+.border-2 {
+  border-width: 2px;
 }
 
 .border-b-2 {
@@ -674,11 +637,6 @@ video {
   background-color: rgb(209 213 219 / var(--tw-bg-opacity));
 }
 
-.bg-black {
-  --tw-bg-opacity: 1;
-  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
-}
-
 .pl-5 {
   padding-left: 1.25rem;
 }
@@ -688,19 +646,14 @@ video {
   line-height: 2rem;
 }
 
-.text-lg {
-  font-size: 1.125rem;
-  line-height: 1.75rem;
-}
-
-.text-9xl {
-  font-size: 8rem;
-  line-height: 1;
-}
-
 .text-7xl {
   font-size: 4.5rem;
   line-height: 1;
+}
+
+.text-lg {
+  font-size: 1.125rem;
+  line-height: 1.75rem;
 }
 
 .outline-none {
@@ -714,4 +667,12 @@ video {
 
 .selected {
   background-color: rgb(116, 116, 116);
+}
+
+.trash {
+  display: none;
+}
+
+.selected .trash {
+  display: inline;
 }
