--- a/app.src.css
+++ b/app.src.css
@@ -29,12 +29,12 @@
     width: 50%;
     font-size: 3vw;
 }
-#check{
+.check{
     width: 4vw;
     height: 2vw;
 }
-#listBox{
-    width: 20vw;
+#userInput{
+    width: 17vw;
     height: 5vh;
     padding: 25px 0px;
     font-size: 2vw;
@@ -56,4 +56,20 @@
   
   .selected .trash {
     display: inline;
+}
+#editTodo{
+    font-size: 10px;
+    float: right;
+}
+.up{
+    width: 10px;
+    height: 10px;
+    display: flex;
+    padding: 15px 30px 15px 5px;
+}
+.down{
+    width: 10px;
+    height: 10px;
+    display: flex; 
+    padding: 15px 30px 15px 5px;
 }
