--- a/app.src.css
+++ b/app.src.css
@@ -23,7 +23,6 @@
 }  
 .current-list-todos{
     font-size: large;
-    border: solid red;
     margin: 1%;
     padding: 5px;
     width: 50%;
@@ -89,4 +88,13 @@
     height: 25%;
     font-size: 45%;
     margin: 5%;
+}
+.green {
+    border: solid green;
+}
+.red {
+    border: solid red;
+}
+.comp {
+    float: right;
 }
