--- a/app.css
+++ b/app.css
@@ -663,6 +663,14 @@ video {
   background-color: rgb(209 213 219 / var(--tw-bg-opacity));
 }
 
+.bg-cover {
+  background-size: cover;
+}
+
+.bg-no-repeat {
+  background-repeat: no-repeat;
+}
+
 .px-10 {
   padding-left: 2.5rem;
   padding-right: 2.5rem;
@@ -708,7 +716,8 @@ video {
 
 .current-list-todos{
   font-size: large;
-  border: solid red;
+  border: solid pink;
+  background-color: white;
   margin: 1%;
   padding: 5px;
   width: 50%;
@@ -783,4 +792,8 @@ video {
   height: 25%;
   font-size: 45%;
   margin: 5%;
+}
+
+.green{
+  border: solid green;
 }
