--- a/app.src.css
+++ b/app.src.css
@@ -23,7 +23,8 @@
 }  
 .current-list-todos{
     font-size: large;
-    border: solid red;
+    border: solid pink;
+    background-color: white;
     margin: 1%;
     padding: 5px;
     width: 50%;
@@ -89,4 +90,7 @@
     height: 25%;
     font-size: 45%;
     margin: 5%;
+}
+.green{
+    border: solid green;
 }
