--- a/app.src.css
+++ b/app.src.css
@@ -22,11 +22,18 @@
     
 }  
 .current-list-todos{
-    font-size: large;
+    
     margin: 1%;
     padding: 5px;
     width: 50%;
     font-size: 3vw;
+}
+.current-list-todos:hover{
+
+    margin: 1.2%;
+    padding: 5.2px;
+    width: 52%;
+    font-size: 3.2vw;
 }
 .check{
     width: 4vw;
