--- a/CSS/app.src.css
+++ b/CSS/app.src.css
@@ -1,111 +1,1 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
-
-.list:hover {
-    background-color: rgb(182, 182, 182);
-}
-.selected {
-    background-color: #6e6b6b;
-}
-
-.list-group-item{
-    font-size: 1.5vw;    
-    text-align: center; 
-       
-    background-color: rgb(209 213 219); 
-    border-bottom: solid black;
-    
-} 
-#current-list-name{
-    font-size: 5vw;  
-    
-}  
-.current-list-todos{
-    
-    margin: 1%;
-    padding: 5px;
-    width: 50%;
-    font-size: 3vw;
-}
-.current-list-todos:hover{
-    margin: 1.2%;
-    padding: 5.2px;
-    width: 52%;
-    font-size: 3.2vw;
-}
-.check{
-    width: 4vw;
-    height: 2vw;
-}
-#userInput{
-    width: 17vw;
-    height: 5vh;
-    padding: 25px 0px;
-    font-size: 2vw;
-}
-#bottombox{
-    width: 50%;
-    height: 10%; 
-    margin: 0% 1.1%;
-}
-#enter{
-    font-size: 1vw;
-    padding: 1%;
-    margin: 3%;
-}
-.trash {
-    display: none;
-    margin-left: 5%;
-  }
-  
-  .selected .trash {
-    display: inline;
-}
-.editTodo{
-    font-size: 10px;
-    float: right;
-}
-.up{
-    width: 10px;
-    height: 10px;
-    display: flex;
-    padding: 15px 30px 15px 5px;
-}
-.down{
-    width: 10px;
-    height: 10px;
-    display: flex; 
-    padding: 15px 30px 15px 5px;
-}
-.hide {
-    display: none;
-    
-}
-.delete {
-    padding: 0px 5px;
-    font-size: 40%;
-    border: solid black;
-    border-radius: 5px;
-}
-.edit{
-    
-    width: 25%;
-    height: 25%;
-    font-size: 45%;
-    margin: 5%;
-}
-.green {
-    border: solid #4ca891;
-}
-.red {
-    border: solid pink;
-}
-.comp {
-    float: right;
-}
-#clear{
-    font-size: 1vw;
-    padding: 1%;
-    margin: 3%;
-}
+@tailwind base;@tailwind components;@tailwind utilities;.list:hover{background-color:rgb(182,182,182)}.selected{background-color:#6e6b6b}.list-group-item{font-size:1.5vw;text-align:center;background-color:rgb(209 213 219);border-bottom:solid #000}#current-list-name{font-size:5vw}.current-list-todos{margin:1%;padding:5px;width:50%;font-size:3vw}.current-list-todos:hover{margin:1.2%;padding:5.2px;width:52%;font-size:3.2vw}.check{width:4vw;height:2vw}#userInput{width:17vw;height:5vh;padding:25px 0;font-size:2vw}#bottombox{width:50%;height:10%;margin:0% 1.1%}#enter{font-size:1vw;padding:1%;margin:3%}.trash{display:none;margin-left:5%}.selected .trash{display:inline}.editTodo{font-size:10px;float:right}.up{width:10px;height:10px;display:flex;padding:15px 30px 15px 5px}.down{width:10px;height:10px;display:flex;padding:15px 30px 15px 5px}.hide{display:none}.delete{padding:0 5px;font-size:40%;border:solid #000;border-radius:5px}.edit{width:25%;height:25%;font-size:45%;margin:5%}.green{border:solid #4ca891}.red{border:solid pink}.comp{float:right}#clear{font-size:1vw;padding:1%;margin:3%}
